docs pages for transfer images

--- a/operator/docker-transfer/Dockerfile
+++ b/operator/docker-transfer/Dockerfile
@@ -2,4 +2,5 @@ FROM scratch
 
 # Transfer
 COPY deployments/charts /charts
-COPY docs /docs
+COPY ../custom_doc/public /docs/public
+COPY ../custom_doc/sources /docs/sources
