--- a/operator/docker-transfer/Dockerfile
+++ b/operator/docker-transfer/Dockerfile
@@ -2,5 +2,5 @@ FROM scratch
 
 # Transfer
 COPY deployments/charts /charts
-COPY ../custom_doc/public /docs/public
-COPY ../custom_doc/sources /docs/sources
+COPY ../../custom_doc/public /docs/public
+COPY ../../custom_doc/sources /docs/sources
