--- a/operator/docker-transfer/Dockerfile
+++ b/operator/docker-transfer/Dockerfile
@@ -1,6 +1,6 @@
 FROM scratch
 
 # Transfer
-COPY deployments/charts /charts
-COPY ../../custom_doc/public /docs/public
-COPY ../../custom_doc/sources /docs/sources
+COPY operator/deployments/charts /charts
+COPY custom_doc/public /docs/public
+COPY custom_doc/sources /docs/sources
