docs pages for transfer images

--- a/.github/docker-build-config.json
+++ b/.github/docker-build-config.json
@@ -9,7 +9,7 @@
     {
       "name": "qubership-mistral-operator-transfer",
       "file": "operator/docker-transfer/Dockerfile",
-      "context": "operator"
+      "context": "."
     },
     {
       "name": "qubership-mistral-operator-bluegreen-agent",
